--- a/src/assets/css/app.less
+++ b/src/assets/css/app.less
@@ -1,21 +1,21 @@
 .App {
     position: relative;
-    .tabar-bottom-list {
-        background: skyblue;
-        z-index: 100;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        display: flex;
-        a {
-            flex:1;
-            font-size: 0.2rem;
-            height: 0.4rem;
-            line-height: 0.4rem;
-            text-align: center;
-        }
-    }
+    // .tabar-bottom-list {
+    //     background: skyblue;
+    //     z-index: 100;
+    //     position: fixed;
+    //     bottom: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     display: flex;
+    //     a {
+    //         flex:1;
+    //         font-size: 0.2rem;
+    //         height: 0.4rem;
+    //         line-height: 0.4rem;
+    //         text-align: center;
+    //     }
+    // }
     .routerView {
         font-size: 0.2rem;
     }
