--- a/src/assets/css/Home.less
+++ b/src/assets/css/Home.less
@@ -18,3 +18,10 @@
     width: 100%;
     height: 100px;
 }
+// 路由激活样式
+.selected1 {
+    background:yellow;
+}
+.selected2 {
+    background:pink;
+}
