修改meta加入拦截器处理全局以及状态管理

--- a/src/assets/css/List.less
+++ b/src/assets/css/List.less
@@ -2,5 +2,5 @@
     // background-color:#f5f5f9 !important;
 }
 .am-search-synthetic-ph {
-    line-height: 20px !important;
+    // line-height: 20px !important;
 }
