--- a/src/assets/css/app.less
+++ b/src/assets/css/app.less
@@ -1,5 +1,6 @@
 .App {
     position: relative;
+    font-size: 0.12rem;
     // .tabar-bottom-list {
     //     background: skyblue;
     //     z-index: 100;
@@ -16,12 +17,45 @@
     //         text-align: center;
     //     }
     // }
-    .routerView {
-        font-size: 0.2rem;
-    }
+    // .routerView {
+    //     font-size: 0.2rem;
+    // }
 }
 //这里配置公共样式
 .m-line {
     background: #fff !important;
     height: 0.1rem !important;
+}
+
+//按钮样式
+//重写样式可以按照风格来
+.am-button.ly-btn-small {
+    font-size: 0.12rem;
+    height: 0.3rem;
+    line-height: 0.3rem;
+    width: auto;
+    display: inline-block;
+    padding:0 0.2rem;
+}
+.am-button.ly-btn-medium {
+    font-size: 0.14rem;
+    height: 0.36rem;
+    line-height: 0.36rem;
+    width: auto;
+    display: inline-block;
+    padding:0 0.2rem;
+}
+.am-button.ly-btn-large {
+    font-size: 0.16rem;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    width: auto;
+    display: inline-block;
+    padding:0 0.2rem;
+}
+
+
+//隔行
+.line-bg-white {
+    background: #fff;
 }
