--- a/src/assets/css/CommentDetail.less
+++ b/src/assets/css/CommentDetail.less
@@ -10,4 +10,9 @@
     .line-w {
         background: #fff;
     }
+    .space-carousel {
+        padding: 16px;
+        background: #DEF1E5;
+        overflow: hidden;
+      }
 }
